--- a/PilkadaJateng/Layouts/CollectionViewCells/TimelineCollectionViewCell.xib
+++ b/PilkadaJateng/Layouts/CollectionViewCells/TimelineCollectionViewCell.xib
@@ -13,32 +13,41 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="TimelineCollectionViewCell" customModule="PilkadaJateng" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="205" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="262" height="217"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="205" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="262" height="217"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9xI-18-pvP">
-                        <rect key="frame" x="0.0" y="0.0" width="205" height="50"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="KHX-rr-0K6">
+                        <rect key="frame" x="-38" y="0.0" width="280" height="197"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kbE-Cy-jnF">
+                                <rect key="frame" x="0.0" y="0.0" width="262" height="194.5"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eR6-3c-41H">
+                                <rect key="frame" x="0.0" y="194.5" width="262" height="22.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="9xI-18-pvP" secondAttribute="bottom" id="CAg-mp-Afa"/>
-                <constraint firstItem="9xI-18-pvP" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="J0g-Dw-Usa"/>
-                <constraint firstAttribute="trailing" secondItem="9xI-18-pvP" secondAttribute="trailing" id="ceR-R1-fna"/>
-                <constraint firstItem="9xI-18-pvP" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="lzZ-Ge-Wm3"/>
+                <constraint firstItem="KHX-rr-0K6" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="09r-BO-den"/>
+                <constraint firstAttribute="trailing" secondItem="KHX-rr-0K6" secondAttribute="trailing" id="G8x-Lh-GER"/>
+                <constraint firstItem="KHX-rr-0K6" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="LiO-f5-hB3"/>
+                <constraint firstAttribute="bottom" secondItem="KHX-rr-0K6" secondAttribute="bottom" id="v3S-T1-n7Q"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="205" height="50"/>
+            <size key="customSize" width="262" height="217"/>
             <connections>
-                <outlet property="titleLabel" destination="9xI-18-pvP" id="hu2-h1-JZV"/>
+                <outlet property="thumbnailImageView" destination="kbE-Cy-jnF" id="70c-Eb-g5u"/>
+                <outlet property="titleLabel" destination="eR6-3c-41H" id="NYE-oA-fXO"/>
             </connections>
-            <point key="canvasLocation" x="117.5" y="54"/>
+            <point key="canvasLocation" x="89" y="137.5"/>
         </collectionViewCell>
     </objects>
 </document>
