--- a/PilkadaJateng/Layouts/CollectionViewCells/TimelineCollectionViewCell.xib
+++ b/PilkadaJateng/Layouts/CollectionViewCells/TimelineCollectionViewCell.xib
@@ -19,33 +19,31 @@
                 <rect key="frame" x="0.0" y="0.0" width="262" height="217"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="KHX-rr-0K6">
-                        <rect key="frame" x="-38" y="0.0" width="280" height="197"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kbE-Cy-jnF">
-                                <rect key="frame" x="0.0" y="0.0" width="262" height="194.5"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eR6-3c-41H">
-                                <rect key="frame" x="0.0" y="194.5" width="262" height="22.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                    </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2XI-Ah-ZpR">
+                        <rect key="frame" x="100" y="186" width="62" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ADD-Tl-8YO">
+                        <rect key="frame" x="10" y="10" width="242" height="166"/>
+                    </imageView>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="KHX-rr-0K6" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="09r-BO-den"/>
-                <constraint firstAttribute="trailing" secondItem="KHX-rr-0K6" secondAttribute="trailing" id="G8x-Lh-GER"/>
-                <constraint firstItem="KHX-rr-0K6" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="LiO-f5-hB3"/>
-                <constraint firstAttribute="bottom" secondItem="KHX-rr-0K6" secondAttribute="bottom" id="v3S-T1-n7Q"/>
+                <constraint firstAttribute="bottom" secondItem="2XI-Ah-ZpR" secondAttribute="bottom" constant="10" id="15G-wo-9Wq"/>
+                <constraint firstAttribute="trailing" secondItem="ADD-Tl-8YO" secondAttribute="trailing" constant="10" id="SJB-KU-o8q"/>
+                <constraint firstItem="ADD-Tl-8YO" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="Sby-ft-2u8"/>
+                <constraint firstItem="2XI-Ah-ZpR" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="100" id="WUq-HC-ei0"/>
+                <constraint firstItem="ADD-Tl-8YO" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="bYd-HZ-FdM"/>
+                <constraint firstAttribute="trailing" secondItem="2XI-Ah-ZpR" secondAttribute="trailing" constant="100" id="pAf-mX-NQk"/>
+                <constraint firstItem="2XI-Ah-ZpR" firstAttribute="top" secondItem="ADD-Tl-8YO" secondAttribute="bottom" constant="10" id="uYi-f9-u6C"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="262" height="217"/>
             <connections>
-                <outlet property="thumbnailImageView" destination="kbE-Cy-jnF" id="70c-Eb-g5u"/>
-                <outlet property="titleLabel" destination="eR6-3c-41H" id="NYE-oA-fXO"/>
+                <outlet property="thumbnailImageView" destination="ADD-Tl-8YO" id="Nei-2y-aA9"/>
+                <outlet property="titleLabel" destination="2XI-Ah-ZpR" id="9WB-Bw-uSI"/>
             </connections>
             <point key="canvasLocation" x="89" y="137.5"/>
         </collectionViewCell>
