--- a/PilkadaJateng/Layouts/TableViewCells/BeritaTableViewCell.xib
+++ b/PilkadaJateng/Layouts/TableViewCells/BeritaTableViewCell.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,31 +14,61 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="BeritaTableViewCell" customModule="PilkadaJateng" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="171" id="KGk-i7-Jjw" customClass="BeritaTableViewCell" customModule="PilkadaJateng" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="620" height="171"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="620" height="170.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KYf-nm-atz">
-                        <rect key="frame" x="16" y="11" width="288" height="22"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="J6U-D1-BwX">
+                        <rect key="frame" x="20" y="11" width="149" height="149"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="J6U-D1-BwX" secondAttribute="height" multiplier="1:1" id="3fb-dN-d2a"/>
+                        </constraints>
+                    </imageView>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="zDZ-ce-wHj">
+                        <rect key="frame" x="189" y="11" width="411" height="149"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nss-MF-1X3">
+                                <rect key="frame" x="0.0" y="0.0" width="411" height="49.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ken-5E-vbO">
+                                <rect key="frame" x="0.0" y="49.5" width="411" height="50"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="01X-IH-NdI">
+                                <rect key="frame" x="0.0" y="99.5" width="411" height="49.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailingMargin" secondItem="KYf-nm-atz" secondAttribute="trailing" id="c7r-Yl-D1v"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="KYf-nm-atz" secondAttribute="bottom" id="cx6-D6-fjm"/>
-                    <constraint firstItem="KYf-nm-atz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="jyK-gt-RYl"/>
-                    <constraint firstItem="KYf-nm-atz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="xaA-RM-fo1"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="zDZ-ce-wHj" secondAttribute="bottom" id="4FS-vQ-GY2"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="zDZ-ce-wHj" secondAttribute="trailing" id="5Oj-ql-UJE"/>
+                    <constraint firstItem="J6U-D1-BwX" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="Axy-GX-KEN"/>
+                    <constraint firstItem="zDZ-ce-wHj" firstAttribute="leading" secondItem="J6U-D1-BwX" secondAttribute="trailing" constant="20" id="C3B-j9-ZuK"/>
+                    <constraint firstItem="J6U-D1-BwX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="NqB-rk-qm1"/>
+                    <constraint firstItem="J6U-D1-BwX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="csT-Cg-Fp1"/>
+                    <constraint firstItem="zDZ-ce-wHj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="g7A-Y5-taH"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="titleLabel" destination="KYf-nm-atz" id="fcg-FK-Tpf"/>
+                <outlet property="dateLabel" destination="ken-5E-vbO" id="bLk-5u-hUG"/>
+                <outlet property="descriptionLabel" destination="01X-IH-NdI" id="9Ve-Qu-C7g"/>
+                <outlet property="thumbnailImage" destination="J6U-D1-BwX" id="zpp-wH-ESm"/>
+                <outlet property="titleLabel" destination="nss-MF-1X3" id="2M5-3F-wmh"/>
             </connections>
+            <point key="canvasLocation" x="190" y="117.5"/>
         </tableViewCell>
     </objects>
 </document>
