--- a/PilkadaJateng/Layouts/CollectionViewCells/TimelineCollectionViewCell.xib
+++ b/PilkadaJateng/Layouts/CollectionViewCells/TimelineCollectionViewCell.xib
@@ -6,6 +6,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,39 +15,94 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="TimelineCollectionViewCell" customModule="PilkadaJateng" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="262" height="217"/>
+            <rect key="frame" x="0.0" y="0.0" width="381" height="572"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="262" height="217"/>
+                <rect key="frame" x="0.0" y="0.0" width="381" height="572"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2XI-Ah-ZpR">
-                        <rect key="frame" x="100" y="186" width="62" height="21"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ADD-Tl-8YO">
+                        <rect key="frame" x="10" y="84" width="361" height="387.5"/>
+                    </imageView>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="M35-22-UrU">
+                        <rect key="frame" x="16" y="20" width="349" height="50"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Urm-Mo-HfL">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Urm-Mo-HfL" secondAttribute="height" multiplier="1:1" id="ace-Ab-4JO"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DLi-8v-lP7">
+                                <rect key="frame" x="60" y="0.0" width="289" height="50"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="50" id="O6v-sV-ltm"/>
+                        </constraints>
+                    </stackView>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="dZn-K0-gcb">
+                        <rect key="frame" x="16" y="486.5" width="70" height="30"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ccV-vi-RQW">
+                                <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ccV-vi-RQW" secondAttribute="height" multiplier="1:1" id="YWN-xI-WOF"/>
+                                    <constraint firstAttribute="height" constant="30" id="mDn-Uz-ORT"/>
+                                    <constraint firstAttribute="width" constant="30" id="ynt-5b-6jK"/>
+                                </constraints>
+                                <state key="normal" image="like_50"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LBK-WE-Sjg">
+                                <rect key="frame" x="40" y="0.0" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="LBK-WE-Sjg" secondAttribute="height" multiplier="1:1" id="2Fv-bf-SWG"/>
+                                    <constraint firstAttribute="width" constant="30" id="Vbb-FD-5Hj"/>
+                                    <constraint firstAttribute="height" constant="30" id="zNq-KD-B7F"/>
+                                </constraints>
+                                <state key="normal" image="chat_50"/>
+                            </button>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="LBK-WE-Sjg" firstAttribute="width" secondItem="LBK-WE-Sjg" secondAttribute="height" multiplier="1:1" id="mav-HI-a8v"/>
+                        </constraints>
+                    </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HhG-81-55d">
+                        <rect key="frame" x="16" y="531.5" width="349" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ADD-Tl-8YO">
-                        <rect key="frame" x="10" y="10" width="242" height="166"/>
-                    </imageView>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="2XI-Ah-ZpR" secondAttribute="bottom" constant="10" id="15G-wo-9Wq"/>
+                <constraint firstItem="dZn-K0-gcb" firstAttribute="top" secondItem="ADD-Tl-8YO" secondAttribute="bottom" constant="15" id="6y8-yc-58N"/>
+                <constraint firstItem="M35-22-UrU" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="topMargin" id="CPf-v7-Afb"/>
+                <constraint firstAttribute="trailingMargin" secondItem="M35-22-UrU" secondAttribute="trailing" id="GQC-bf-RNA"/>
+                <constraint firstAttribute="bottomMargin" secondItem="HhG-81-55d" secondAttribute="bottom" constant="20" id="KPb-ZJ-NHf"/>
                 <constraint firstAttribute="trailing" secondItem="ADD-Tl-8YO" secondAttribute="trailing" constant="10" id="SJB-KU-o8q"/>
-                <constraint firstItem="ADD-Tl-8YO" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="Sby-ft-2u8"/>
-                <constraint firstItem="2XI-Ah-ZpR" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="100" id="WUq-HC-ei0"/>
+                <constraint firstItem="ADD-Tl-8YO" firstAttribute="top" secondItem="M35-22-UrU" secondAttribute="bottom" constant="14" id="V6l-2n-C9k"/>
                 <constraint firstItem="ADD-Tl-8YO" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="bYd-HZ-FdM"/>
-                <constraint firstAttribute="trailing" secondItem="2XI-Ah-ZpR" secondAttribute="trailing" constant="100" id="pAf-mX-NQk"/>
-                <constraint firstItem="2XI-Ah-ZpR" firstAttribute="top" secondItem="ADD-Tl-8YO" secondAttribute="bottom" constant="10" id="uYi-f9-u6C"/>
+                <constraint firstItem="HhG-81-55d" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leadingMargin" id="cYJ-hq-AsI"/>
+                <constraint firstItem="dZn-K0-gcb" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leadingMargin" id="fFs-WG-SNY"/>
+                <constraint firstItem="HhG-81-55d" firstAttribute="top" secondItem="dZn-K0-gcb" secondAttribute="bottom" constant="15" id="v3m-mE-6UA"/>
+                <constraint firstItem="M35-22-UrU" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leadingMargin" id="vW0-30-a5K"/>
+                <constraint firstAttribute="trailingMargin" secondItem="HhG-81-55d" secondAttribute="trailing" id="xbJ-im-G05"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="262" height="217"/>
+            <size key="customSize" width="381" height="572"/>
             <connections>
                 <outlet property="thumbnailImageView" destination="ADD-Tl-8YO" id="Nei-2y-aA9"/>
-                <outlet property="titleLabel" destination="2XI-Ah-ZpR" id="9WB-Bw-uSI"/>
+                <outlet property="titleLabel" destination="HhG-81-55d" id="g5E-Tf-gl0"/>
             </connections>
-            <point key="canvasLocation" x="89" y="137.5"/>
+            <point key="canvasLocation" x="148.5" y="314"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="chat_50" width="25" height="25"/>
+        <image name="like_50" width="50" height="50"/>
+    </resources>
 </document>
