Update timeline post on sender + other

--- a/PilkadaJateng/Layouts/CollectionViewCells/TimelineCollectionViewCell.xib
+++ b/PilkadaJateng/Layouts/CollectionViewCells/TimelineCollectionViewCell.xib
@@ -21,7 +21,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="381" height="572"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ADD-Tl-8YO">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ADD-Tl-8YO">
                         <rect key="frame" x="10" y="84" width="361" height="387.5"/>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="M35-22-UrU">
